--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             background:#54af29;
             border-color:#2C7505;
             color:#fff;
+            width:145px;
             font-size:25px;
             text-shadow:1px 1px -1px #2C7505;
             padding:10px;
@@ -33,7 +34,8 @@
         </style>
     </head>
     <body>
-        <button id='authenticate'>authenticate with openstreetmap</button>
+        <button id='authenticate'>login</button>
+        <button id='logout'>logout</button>
         <div id='user'>
             <h1 id='display_name'></h1>
             <h2 id='id'></h2>
@@ -43,7 +45,7 @@
         <script>
         var auth = osmAuth({
             oauth_secret: '9WfJnwQxDvvYagx1Ut0tZBsOZ0ZCzAvOje3u1TV0',
-            oauth_consumer_key: "WLwXbm6XFMG7WrVnE8enIF6GzyefYIN6oUJSxG65"
+            oauth_consumer_key: 'WLwXbm6XFMG7WrVnE8enIF6GzyefYIN6oUJSxG65'
         });
         function done(err, res) {
             if (err) return alert('error!');
@@ -59,14 +61,32 @@
             }
             document.getElementById('user').style.display = 'block';
         }
+
         document.getElementById('authenticate').onclick = function() {
             auth.authenticate(function() {
-                auth.xhr({
-                    method: 'GET',
-                    path: '/api/0.6/user/details'
-                }, done);
+                showDetails();
             });
         };
+
+        function showDetails() {
+            auth.xhr({
+                method: 'GET',
+                path: '/api/0.6/user/details'
+            }, done);
+        }
+
+        function hideDetails() {
+            document.getElementById('user').style.display = 'none';
+        }
+
+        document.getElementById('logout').onclick = function() {
+            auth.logout();
+            hideDetails();
+        };
+
+        if (auth.authenticated()) {
+            showDetails();
+        }
         </script>
     </body>
 </html>
