--- a/index.html
+++ b/index.html
@@ -1,119 +1,149 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>osm-auth</title>
-        <link rel='stylesheet' type='text/css' href='' />
-        <meta http-equiv='content-type' content='text/html; charset=utf-8' />
-        <style>
-        body {
-            width: 300px;
-            margin: 40px auto;
-            font:normal 12px/20px 'Helvetica Neue', sans-serif;
-        }
-        button {
-            border-radius:5px;
-            background:#54af29;
-            border-color:#2C7505;
-            color:#fff;
-            width:145px;
-            font-size:25px;
-            text-shadow:1px 1px -1px #2C7505;
-            padding:10px;
-        }
-        button.done {
-            background:#2C7505;
-        }
-        button:hover {
-            background: #2C7505;
-        }
-        #user {
-            display:none;
-            font:normal 15px/20px 'Helvetica Neue', sans-serif;
-            text-align:center;
-        }
-        h1, h2 {
-            margin: 10px 0;
-        }
-        p {
-            text-align:center;
-            color:#666;
-        }
-        </style>
-    </head>
-    <body>
-        <button id='authenticate'>login</button>
-        <button id='logout'>logout</button>
-        <div id='user'>
-            <h1 id='display_name'></h1>
-            <h2 id='id'></h2>
-            Changesets: <span id='count'></span>
-        </div>
-        <p><a href='https://github.com/osmlab/osm-auth'>osm-auth</a> is a minimal
-        example of authenticating and interacting with the
-        <a href='http://www.openstreetmap.org/'>openstreetmap</a>
-        API.</p>
-        <script src='osmauth.js'></script>
-        <script>
-        var auth = osmAuth({
-            oauth_secret: '9WfJnwQxDvvYagx1Ut0tZBsOZ0ZCzAvOje3u1TV0',
-            oauth_consumer_key: 'WLwXbm6XFMG7WrVnE8enIF6GzyefYIN6oUJSxG65'
-        });
-        function done(err, res) {
-            if (err) {
-                document.getElementById('user').innerHTML = 'error! try clearing your browser cache';
-                document.getElementById('user').style.display = 'block';
-                return;
-            }
-            var u = res.getElementsByTagName('user')[0];
-            var changesets = res.getElementsByTagName('changesets')[0];
-            var o = {
-                display_name: u.getAttribute('display_name'),
-                id: u.getAttribute('id'),
-                count: changesets.getAttribute('count')
-            };
-            for (var k in o) {
-                document.getElementById(k).innerHTML = o[k];
-            }
-            document.getElementById('user').style.display = 'block';
-        }
+  <head>
+    <title>osm-auth</title>
+    <link rel="stylesheet" type="text/css" href="" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <style>
+      body {
+        width: 300px;
+        margin: 40px auto;
+        font: normal 12px/20px "Helvetica Neue", sans-serif;
+      }
+      button {
+        border-radius: 5px;
+        background: #54af29;
+        border-color: #2c7505;
+        color: #fff;
+        width: 145px;
+        font-size: 25px;
+        text-shadow: 1px 1px -1px #2c7505;
+        padding: 10px;
+      }
+      button.done {
+        background: #2c7505;
+      }
+      button:hover {
+        background: #2c7505;
+      }
+      #user {
+        display: none;
+        font: normal 15px/20px "Helvetica Neue", sans-serif;
+        text-align: center;
+      }
+      h1,
+      h2 {
+        margin: 10px 0;
+      }
+      p {
+        text-align: center;
+        color: #666;
+      }
+    </style>
+  </head>
+  <body>
+    <button id="authenticate">login</button>
+    <button id="logout">logout</button>
+    <div id="user">
+      <h1 id="display_name"></h1>
+      <h2 id="id"></h2>
+      Changesets: <span id="count"></span>
+    </div>
+    <p>
+      <a href="https://github.com/osmlab/osm-auth">osm-auth</a> is a minimal
+      example of authenticating and interacting with the
+      <a href="http://www.openstreetmap.org/">openstreetmap</a>
+      API.
+    </p>
+    <script src="osmauth.js"></script>
+    <script>
+      var auth = osmAuth({
+        url: "https://master.apis.dev.openstreetmap.org",
+        client_id: "GKVnhzoferm3p2uXsh1hzwziuvCzUkIXw3mzfFC0sL4",
+        redirect_uri: "http://127.0.0.1:8080/land.html",
+      });
 
-        document.getElementById('authenticate').onclick = function() {
-            if (!auth.bringPopupWindowToFront()) {
-                auth.authenticate(function() {
-                    update();
-                });
-            }
+      function done(err, res) {
+        console.log("done", err, res);
+        if (err) {
+          document.getElementById("user").innerHTML =
+            "error! try clearing your browser cache";
+          document.getElementById("user").style.display = "block";
+          return;
+        }
+        var u = res.getElementsByTagName("user")[0];
+        var changesets = res.getElementsByTagName("changesets")[0];
+        var o = {
+          display_name: u.getAttribute("display_name"),
+          id: u.getAttribute("id"),
+          count: changesets.getAttribute("count"),
         };
-
-        function showDetails() {
-            auth.xhr({
-                method: 'GET',
-                path: '/api/0.6/user/details'
-            }, done);
+        for (var k in o) {
+          document.getElementById(k).innerHTML = o[k];
         }
+        document.getElementById("user").style.display = "block";
+      }
 
-        function hideDetails() {
-            document.getElementById('user').style.display = 'none';
-        }
-
-        document.getElementById('logout').onclick = function() {
-            auth.logout();
+      document.getElementById("authenticate").onclick = function () {
+        if (!auth.bringPopupWindowToFront()) {
+          auth.authenticate(function () {
             update();
-        };
-
-        function update() {
-            if (auth.authenticated()) {
-                document.getElementById('authenticate').className = 'done';
-                document.getElementById('logout').className = '';
-                showDetails();
-            } else {
-                document.getElementById('authenticate').className = '';
-                document.getElementById('logout').className = 'done';
-                hideDetails();
-            }
+          });
         }
+      };
 
+      function showDetails() {
+        console.log(">>>")
+        auth.xhr(
+          {
+            method: "GET",
+            path: "/api/0.6/user/details",
+          },
+          done
+        );
+        // fetch(
+        //   "https://master.apis.dev.openstreetmap.org/api/0.6/user/details",
+        //   {
+        //     method: "GET",
+        //     headers: {
+        //       "Content-Type": "application/x-www-form-urlencoded",
+        //       Authorization: `Bearer ${localStorage
+        //         .getItem("https://master.apis.dev.openstreetmap.orgoauth_token")
+        //         .replaceAll('"', "")}`,
+        //     },
+        //   }
+        // )
+        //   .then((data) => data.text())
+        //   .then((data) =>
+        //     done(null, new window.DOMParser().parseFromString(data, "text/xml"))
+        //   );
+      }
+
+      function hideDetails() {
+        document.getElementById("user").style.display = "none";
+      }
+
+      document.getElementById("logout").onclick = function () {
+        auth.logout();
         update();
-        </script>
-    </body>
+      };
+
+      function update() {
+        console.log("update chiryo");
+        if (auth.authenticated()) {
+          console.log("yes done")
+          document.getElementById("authenticate").className = "done";
+          document.getElementById("logout").className = "";
+          showDetails();
+        } else {
+          console.log("no done")
+          document.getElementById("authenticate").className = "";
+          document.getElementById("logout").className = "done";
+          hideDetails();
+        }
+      }
+
+      update();
+    </script>
+  </body>
 </html>
