added redirect uri and ohauth as git dependency

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             client_id: "IEt_7zJAqJ5dUW_uTg29jPIba0-xB61k-OKyFVH6mAw",
             client_secret: "1Z-TAOcQMFELTVSx0l36fJDb2LrymA8A4JnY243sZw0",
             scope: "read_prefs write_api",
+            redirect_uri: "http://127.0.0.1:8080/land.html"
         });
 
         function done(err, res) {
