Cleanups, use token with "read_prefs" scope only Wheverever we use callbacks, never return the results of the callback This makes the return signatures more consistent (closes #53)

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     </p>
     <script src="dist/osm-auth.iife.js"></script>
     <script>
-        var auth = osmAuth({
-            client_id: "IEt_7zJAqJ5dUW_uTg29jPIba0-xB61k-OKyFVH6mAw",
-            client_secret: "1Z-TAOcQMFELTVSx0l36fJDb2LrymA8A4JnY243sZw0",
-            scope: "read_prefs write_api",
+        var auth = osmAuth.osmAuth({
+            client_id: "JWXSAzNp64sIRMStTnkhMRaMxSR964V4sFgn3KUZNTA",
+            client_secret: "6umOXfkZqH5CVUtv6iDqN7k8o7mKbQvTrHvbDQH36hs",
+            scope: "read_prefs",
             redirect_uri: "http://127.0.0.1:8080/land.html"
         });
 
