more accurate method to detect oauth authorization response
otherwise, regular parameters of the single page application could falsely be detected as a response for the oauth authorization call and trigger the `getAccessToken` phase, potentially causing undesired errors or otherwise unwanted behavior

example: https://example.com/index.html?chapter=my-code-challenge <- this includes the string `code`, but not actually the `code` parameter to perform an access token request

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       redirect_uri: redirectPath,
       singlepage: true
     });
-    if (window.location.search.includes('code')) {
+    if (window.location.search.slice(1).split('&').some(p => p.startsWith('code='))) {
       auth.authenticate(function() {
         history.pushState({}, null, window.location.pathname);
         update();
