Nag user if they are on an old browser

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 </head>
 
 <body>
+  <script>var $buoop={required:{i:15,e:-4,f:-3,o:-3,s:-1,c:-3},reminder:0,noclose:true,no_permanent_hide:true,insecure:true,api:2023.07};</script>
+  <script src='https://browser-update.org/update.js'></script>
+
   <div id="buttons">
     <button id="authenticate">login</button>
     <button id="logout">logout</button>
