--- a/land.html
+++ b/land.html
@@ -2,8 +2,10 @@
 <html><head></head>
   <body>
     <script>
-      opener.authComplete(window.location.href);
-      window.close();
+      if (new URLSearchParams(location.search).has("code")) {
+        new BroadcastChannel("osm-api-auth-complete").postMessage(location.href);
+        window.close();
+      }
     </script>
   </body>
 </html>
